added redis and fixed some frontend