@@ -10,7 +10,9 @@ import com.rsp.backend.repository.FileMetadataRepository;
 import com.rsp.backend.repository.RatingRepository;
 import com.rsp.backend.service.FileMetadataService;
 import com.rsp.backend.service.SupabaseStorageService;
+import com.rsp.backend.cache.FileMetadataCacheService;
 import lombok.RequiredArgsConstructor;
+import com.rsp.backend.dto.FileMetadataResponse;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.transaction.annotation.Transactional;
@@ -20,6 +22,7 @@ import org.springframework.web.server.ResponseStatusException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/files")
@@ -32,6 +35,7 @@ public class FileController {
     private final FileMetadataRepository fileMetadataRepository;
     private final RatingRepository ratingRepository;
     private final EnrollmentRepository enrollmentRepository;
+    private final FileMetadataCacheService fileMetadataCacheService;
 
     @PostMapping(value = "/upload", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     public ResponseEntity<FileMetadataResponse> uploadFile(
@@ -55,7 +59,7 @@ public class FileController {
         SupabaseStorageService.SupabaseUploadResult result = supabaseStorageService.upload(file, folderPath);
 
         FileMetadata metadata = fileMetadataService.saveMetadata(
-                file, course, currentUser, result.publicUrl(), result.objectPath());
+            file, course, currentUser, result.publicUrl(), result.objectPath());
         return ResponseEntity.ok(FileMetadataResponse.from(metadata));
     }
 
@@ -64,9 +68,17 @@ public class FileController {
             @RequestParam Long courseId,
             @RequestParam(required = false) String sortBy,
             @RequestParam(required = false) String direction) {
-        List<FileMetadataResponse> results = fileMetadataService.listFilesByCourse(courseId, sortBy, direction).stream()
+        var results = fileMetadataCacheService.getFilesByCourse(courseId);
+        return ResponseEntity.ok(results);
+    }
+
+    @GetMapping("/search")
+    public ResponseEntity<List<FileMetadataResponse>> searchFiles(
+            @RequestParam String q,
+            @RequestParam(required = false) Long courseId) {
+        var results = fileMetadataService.searchFiles(q, courseId).stream()
                 .map(FileMetadataResponse::from)
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.ok(results);
     }
 
@@ -93,34 +105,11 @@ public class FileController {
         fileMetadataRepository.delete(metadata);
         fileMetadataRepository.flush();
         supabaseStorageService.delete(metadata.getObjectPath());
+        try {
+            fileMetadataCacheService.evictFilesByCourse(metadata.getCourse().getId());
+        } catch (Exception ignored) {}
         return ResponseEntity.noContent().build();
     }
 
-    public record FileMetadataResponse(
-            Long id,
-            String fileName,
-            String fileUrl,
-            String fileType,
-            Long fileSize,
-            String objectPath,
-            Long courseId,
-            Long uploadedBy,
-            String uploadedByName,
-            String uploadedAt
-    ) {
-        public static FileMetadataResponse from(FileMetadata metadata) {
-            return new FileMetadataResponse(
-                    metadata.getId(),
-                    metadata.getFileName(),
-                    metadata.getFileUrl(),
-                    metadata.getFileType(),
-                    metadata.getFileSize(),
-                    metadata.getObjectPath(),
-                    metadata.getCourse().getId(),
-                    metadata.getUploadedBy().getId(),
-                    metadata.getUploadedBy().getFullName(),
-                    metadata.getUploadedAt() != null ? metadata.getUploadedAt().toString() : null
-            );
-        }
-    }
+    
 }
